--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h1>Self-Sovereignty Capital</h1>
 </div>
 <div class="social-icons">
-<a href="https://twitter.com/Loganjastremski" target="_blank"><img src="twitter.svg"></a>
+<a href="https://twitter.com/SS__Capital" target="_blank"><img src="twitter.svg"></a>
 </div>
 <script src="scale.fix.js"></script>
 
